--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+body{
+    margin: 0;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100vh;
+}
+
 .container{
     display: flex;
 }
@@ -14,11 +21,14 @@
 #display{
     flex: 6;
     align-items: center;
+    
 }
 
 #grid{
-    height: 600px;
-    width: 600px;
+    height: 500px;
+    width: 500px;
+    padding: 32px;
+
 }
 
 .row{
@@ -28,5 +38,15 @@
 .column{
     flex: 1;
     text-align: center;
-    border: 2px solid red;
+    border: 1px solid red;
+}
+
+#footer{
+    min-width: 564px;
+    background-color: #00003b;
+    color: aquamarine;
+    display: flex;
+    justify-content: center;
+    padding: 12px;
+    margin-top: 12px;
 }
