--- a/style.css
+++ b/style.css
@@ -15,10 +15,9 @@ body{
     justify-content: center;
 }
 
-#display{
-    flex: 4;
-    align-items: center;
-    padding: 32px;
+#options{
+    margin-bottom: 24px;
+    padding: 12px 0;
 }
 
 #grid{
@@ -26,9 +25,9 @@ body{
     width: 500px;
     flex-direction: column;
     box-shadow: 0px 4px 8px #0F0F0F;
+    margin-bottom: 16px;
 }
 
-#options,
 .column,
 .row{
     flex: 1;
@@ -48,7 +47,7 @@ body{
 #footer{
     background-color: #00003b;
     color: aquamarine;
-    margin-top: 12px;
+    margin-top: 16px;
 }
 
 @media (max-width: 850px){
