--- a/style.css
+++ b/style.css
@@ -17,25 +17,22 @@ body{
 
 #options{
     margin-bottom: 24px;
-
     justify-content: space-evenly;
+    align-items: center;
 }
 
-.slidecontainer{
+#options .container{
+    flex-direction: column;
+    align-items: center;
     color:#00003b;
     font-size: 18px;
     font-weight: 900;
 }
 
-.slidecontainer p{
-    text-align: center;
-    margin: 0;
-}
-
+#background,
 #colour{
-    appearance: none;
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
     border: none;
 }
 
